feat: userbackoffice and permissions
