# backoffice/src/api/index.ts
@@ -1,0 +1,4 @@
+export { authAPI } from "./auth";
+export { usersAPI } from "./users";
+export { permissionsAPI } from "./permissions";
+export { default as client } from "./client";
